--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "braindump"
+name = "jd"
 version = "0.1.0"
 authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
 
 [dependencies]
+libc = "0.2"
 nix = "0.12.0"
-goblin = "0.0.19"
+clap = "2.32.0"
