--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
 
 [dependencies]
+clap = "2.32.0"
+
 libc = "0.2"
 nix = "0.12.0"
-clap = "2.32.0"
+syscall = "0.2.1"
+
+serde = "1.0.88"
+serde_derive = "1.0.88"
