--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "jd"
+name = "jtrace"
 version = "0.1.0"
 authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
 
 [dependencies]
-clap = "2.32.0"
-
 libc = "0.2"
 nix = "0.12.0"
 syscall = "0.2.1"
