--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
 [dependencies]
 libc = "0.2"
 nix = "0.12.0"
-syscall = "0.2.1"
 clap = "2.33.0"
+log = "0.4.6"
 
 serde = "1.0.88"
 serde_derive = "1.0.88"
