--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
 
 [dependencies]
 libc = "0.2"
-nix = "0.12.0"
+nix = "0.13.0"
+
 clap = "2.33.0"
 log = "0.4.6"
 
-serde = "1.0.88"
-serde_derive = "1.0.88"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
