--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ nix = "0.13.0"
 
 clap = "2.33.0"
 log = "0.4.6"
+regex = "1.2.0"
+lazy_static = "1.3.0"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
